--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ defaults:
 jobs:
   Autobuild:
     runs-on: ubuntu-latest
+    env:
+      IS_RELEASE: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
       - name: Set autocrlf
         run: git config --global core.autocrlf true
@@ -25,13 +27,15 @@ jobs:
           make -j$(nproc) C4GROUP=$C4GROUP
           rm packed/.exists
           cd packed
-          ../updates/make_group_updates.sh
+# We don't need c4u update files right now, we do a fresh release
+#          ../updates/make_group_updates.sh
       - uses: actions/upload-artifact@v3
         with:
           name: sc-content
           path: packed/sc_content.zip
       - name: "Release"
         uses: softprops/action-gh-release@v1
+        if: ${{ env.IS_RELEASE == 'true' }}
         with:
           files: packed/*
         env:
